WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120917
Elements retained by AccessibilityImageMapLink leak
https://bugs.webkit.org/show_bug.cgi?id=120917
Summary
Elements retained by AccessibilityImageMapLink leak
Ryosuke Niwa
Reported
2013-09-06 19:00:20 PDT
Elements retained by AccessibilityImageMapLink leak
Attachments
Fixes the bug
(3.32 KB, patch)
2013-09-06 19:01 PDT
,
Ryosuke Niwa
cfleizach
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-09-06 19:01:07 PDT
Created
attachment 210829
[details]
Fixes the bug
Radar WebKit Bug Importer
Comment 2
2013-09-06 19:01:46 PDT
<
rdar://problem/14935614
>
chris fleizach
Comment 3
2013-09-06 19:53:56 PDT
Comment on
attachment 210829
[details]
Fixes the bug Thanks
Ryosuke Niwa
Comment 4
2013-09-06 21:14:28 PDT
Committed
r155234
: <
http://trac.webkit.org/changeset/155234
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug